ubiquity (2.5.6) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Recommend btrfs-tools (LP: #674805).

  [ Mario Limonciello ]
  * If available, copy GRUB translations in oem-config user mode.
    (LP: #686789)

  [ Evan Dandrea ]
  * Add debconf template for password confirmation (LP: #654491).
  * Translate the 'passwords do not match' string (LP: #686737).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 02 Dec 2010 19:49:45 +0000

ubiquity (2.5.5) natty; urgency=low

  * Ensure that /var/lib/ubiquity exists in scripts/plugininstall.py.
  * Automatic update of included source packages: partman-auto 93ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 02 Dec 2010 17:00:29 +0000

ubiquity (2.5.4) natty; urgency=low

  * ubiquity/frontend/kde_components/PartAuto.py fix namespace on QWidget
    LP: #684059

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 02 Dec 2010 12:50:08 +0000

ubiquity (2.5.3) natty; urgency=low

  * Automatic update of included source packages: apt-setup 1:0.49ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 01 Dec 2010 17:20:02 +0000

ubiquity (2.5.2) natty; urgency=low

  [ Julien Lavergne ]
  * debian/ubiquity.ubiquity.upstart, debian/oem-config.oem-config.upstart:
    - Add lxdm support.
  * Add support for openbox-lubuntu and lxsession for ubiquity-dm (LP: #546445)

  [ Colin Watson ]
  * Automatic update of included source packages: apt-setup 1:0.49ubuntu2,
    user-setup 1.28ubuntu11.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 29 Nov 2010 14:59:02 +0000

ubiquity (2.5.1) natty; urgency=low

  [ Colin Watson ]
  * Remove 'localhost' from default ::1 line in /etc/hosts (see netcfg 1.57,
    Debian #595107).

  [ Evan Dandrea ]
  * Expose the navigation control in the GTK frontend API.
    Thanks Ying-Chun Liu!
  * Do not filter out partitions in migration-assistant anymore.
    parted_server is no longer running by the time it starts, but that's
    of no matter as it runs long after the partitioning has been
    committed.